| Bug #56763 | distributing TABLENAME timed out. Ignoring | ||
|---|---|---|---|
| Submitted: | 14 Sep 2010 6:42 | Modified: | 17 Sep 2010 16:14 |
| Reporter: | Jonas Oreland | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S3 (Non-critical) |
| Version: | mysql-5.1-telco-6.3 | OS: | Any |
| Assigned to: | Jonas Oreland | CPU Architecture: | Any |
[14 Sep 2010 6:49]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/118136 3288 Jonas Oreland 2010-09-14 ndb - bug#56763 - fix(unf-k) schema_subscribers-bitmask handling
[14 Sep 2010 6:52]
Bugs System
Pushed into mysql-5.1-telco-6.3 5.1.47-ndb-6.3.38 (revid:jonas@mysql.com-20100914064513-58rp5jk80y6wtmqk) (version source revid:jonas@mysql.com-20100914064513-58rp5jk80y6wtmqk) (merge vers: 5.1.47-ndb-6.3.38) (pib:21)
[14 Sep 2010 7:05]
Bugs System
Pushed into mysql-5.1-telco-7.0 5.1.47-ndb-7.0.19 (revid:jonas@mysql.com-20100914065447-9h17i604syh3wrpd) (version source revid:jonas@mysql.com-20100914065447-9h17i604syh3wrpd) (merge vers: 5.1.47-ndb-7.0.19) (pib:21)
[17 Sep 2010 15:01]
Jonas Oreland
pushed to 6.3.38, 7.0.19 and 7.1.8
[17 Sep 2010 16:14]
Jon Stephens
Documented bugfix in the NDB-6.3.38, 7.0.19, and 7.1.8 changelogs, as follows:
When multiple SQL nodes were connected to the cluster and one of
them stopped in the middle of a DDL operation, the mysqld process
issuing the DDL timed out with the error -distributing TABLENAME
timed out. Ignoring-.
Closed.
[29 Sep 2010 10:54]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/119379 3288 Martin Skold 2010-09-29 [merge] Merge removed: cluster_change_hist.txt modified: mysql-test/collections/default.experimental mysql-test/suite/ndb/r/ndb_database.result mysql-test/suite/ndb/t/ndb_database.test sql/ha_ndbcluster.cc sql/ha_ndbcluster.h sql/ha_ndbcluster_binlog.cc sql/handler.cc sql/handler.h sql/sql_show.cc sql/sql_table.cc storage/ndb/include/kernel/GlobalSignalNumbers.h storage/ndb/include/kernel/signaldata/FsReadWriteReq.hpp storage/ndb/include/mgmapi/mgmapi.h storage/ndb/include/ndbapi/NdbDictionary.hpp storage/ndb/src/kernel/blocks/ERROR_codes.txt storage/ndb/src/kernel/blocks/dbdict/Dbdict.cpp storage/ndb/src/kernel/blocks/dbdih/DbdihMain.cpp storage/ndb/src/kernel/blocks/dblqh/Dblqh.hpp storage/ndb/src/kernel/blocks/dblqh/DblqhMain.cpp storage/ndb/src/kernel/blocks/dbtup/Dbtup.hpp storage/ndb/src/kernel/blocks/dbtup/DbtupIndex.cpp storage/ndb/src/kernel/blocks/dbtup/DbtupMeta.cpp storage/ndb/src/kernel/blocks/dbtux/Dbtux.hpp storage/ndb/src/kernel/blocks/dbtux/DbtuxBuild.cpp storage/ndb/src/kernel/blocks/dbtux/DbtuxMaint.cpp storage/ndb/src/kernel/blocks/dbtux/DbtuxNode.cpp storage/ndb/src/kernel/blocks/dbtux/DbtuxTree.cpp storage/ndb/src/kernel/blocks/ndbfs/AsyncFile.cpp storage/ndb/src/kernel/blocks/ndbfs/AsyncFile.hpp storage/ndb/src/kernel/blocks/ndbfs/Ndbfs.cpp storage/ndb/src/kernel/blocks/ndbfs/Ndbfs.hpp storage/ndb/src/kernel/blocks/ndbfs/VoidFs.cpp storage/ndb/src/kernel/blocks/suma/Suma.cpp storage/ndb/src/kernel/blocks/suma/Suma.hpp storage/ndb/src/kernel/main.cpp storage/ndb/src/ndbapi/DictCache.cpp storage/ndb/src/ndbapi/DictCache.hpp storage/ndb/src/ndbapi/NdbDictionary.cpp storage/ndb/src/ndbapi/NdbDictionaryImpl.cpp storage/ndb/src/ndbapi/NdbDictionaryImpl.hpp storage/ndb/test/include/NdbRestarter.hpp storage/ndb/test/ndbapi/testIndex.cpp storage/ndb/test/ndbapi/testRestartGci.cpp storage/ndb/test/ndbapi/testSystemRestart.cpp storage/ndb/test/run-test/daily-basic-tests.txt storage/ndb/test/src/NdbRestarter.cpp

Description: When distributing DDL to other mysqlds a bit mask of which mysql's that has responded is kept to make sure that all mysqld respond. However this code contains bugs, e.g if a DDL is issued, and one mysqld stops in the middle. and there are 2 mysqld attached to cluster, The mysqld issuing the DDL will timeout as $SUBJECT How to repeat: 2 mysqld mysqltest -hmysql2 <<EOF drop table if exists t1; let $1=1000; while ($1) { create table t1 (a int primary key) engine = ndb; alter table t1 add column b int; drop table t1; } EOF kill mysqld2 Suggested fix: .