ndb - bug#56763 - fix(unf-k) schema_subscribers-bitmask handling